2001-07-03  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/Makefile.am (INCLUDES): Use correct location for Glade
	data

2001-07-03  Richard Hestilow  <hestilow@ximian.com>
	
	* configure.in: Add PKG_CHECK_MODULES for SCREENSAVER_CAPPLET.

2001-06-29  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/Makefile.am (bin_PROGRAMS): Add target for
	sound-properties-capplet
	(INCLUDES): Install from new-sound-properties

	* configure.in (CAPPLET_{CFLAGS|LIBS}): Add bonobo_conf to each

2001-06-27  Richard Hestilow  <hestilow@ximian.com>
	
	* configure.in: Check for pkg-config >= 0.6.0 without the use of
	a macro -- people were having issues with older versions with
	no macros.

2001-06-21  Havoc Pennington  <hp@redhat.com>

	* configure.in: switch to using pkg-config to find things

	* capplets/*/Makefile.am: clean up crufty flags, adapt to
	configure.in changes

2001-06-21  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/new-*/main.c (main): Abort if prefs structure is NULL
	when editing outside the current location. Fixes crash when bad
	XML data are supplied.

	* capplets/new-*/main.c (do_set_xml): Fix to use correct
	termination condition and g_string API

2001-06-20  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/new-*/main.c (do_set_xml): Don't save unless
	apply_settings is set

2001-06-20  Richard Hestilow  <hestilow@ximian.com>

	* capplets/new-background-properties/applicer.c
	(get_geometry): Handle properly the case where centered/tiled
	image is larger than the screen/preview.

2001-06-20  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/new-background-properties/applier.c
	(is_nautilus_running): Fixed nitems check
	(set_root_pixmap): Passing -1 makes the function just set the
	pixmap to what it was

2001-06-18  Bradford Hovinen  <hovinen@ximian.com>

	* capplets/new-*/main.c (do_set_xml): Use read () rather than
	fread () to make sure to catch end-of-file. Gracefully handle
	no-data case.

2001-06-12  Bradford Hovinen  <hovinen@ximian.com>