@@ -1,5 +1,5 @@
 always_built_SUBDIRS = desktop-links  \
-	 new-background-properties new-screensaver-properties \
+	new-background-properties new-screensaver-properties \
         theme-switcher new-sound-properties new-bell-properties \
 	new-ui-properties url-properties gnome-edit-properties \
 	session-properties wm-properties new-keyboard-properties \
@@ -21,10 +21,22 @@ sound_properties_capplet_SOURCES = sound-properties-capplet.c
 
 sound_properties_capplet_LDADD = @CAPPLET_LIBS@
 
-OAF_FILES = 						\
+oafdir = $(datadir)/oaf
+oaf_DATA = \
 	Bonobo_Control_Capplet_sound_properties.oaf			
 
-oafdir = $(datadir)/oaf
-oaf_DATA = $(OAF_FILES)
+Gladedir = $(datadir)/control-center-data
+Glade_DATA = \
+	sound-properties.glade
 
-EXTRA_DIST = $(OAF_FILES)
+glade_msgs = \
+	sound-properties.glade.h
+Applicationsdir = $(datadir)/control-center/Desktop
+Applications_DATA = \
+	sound-properties.desktop
+
+pApplicationsdir = $(datadir)/gnome/apps/Settings/Desktop
+pApplications_DATA = \
+	sound-properties.desktop
+
+EXTRA_DIST = ChangeLog $(Applications_DATA) $(Glade_DATA) $(glade_msgs) $(oaf_DATA)
