@@ -1,5 +1,8 @@
 2001-07-03  Bradford Hovinen  <hovinen@ximian.com>
 
+	* capplet-dir.c (capplet_control_launch): Use GnomeDialog rather
+	than BonoboWindow
+
 	* main.c (main): Connect destroy signal on capplet window to
 	gtk_main_quit
 
