@@ -1,7 +1,11 @@
 2001-07-03  Bradford Hovinen  <hovinen@ximian.com>
 
+	* archiver/Makefile.am (bonobo_moniker_archiver_LDADD): Use @...@
+	rather than $(...) for pkg-config's sake
+
 	* capplets/Makefile.am (INCLUDES): Use correct location for Glade
 	data
+	Added sound-properties.glade, sound-properties.desktop
 
 2001-07-03  Richard Hestilow  <hestilow@ximian.com>
 	
